# notionpub

./: .gitignore  README.md  pyproject.toml
example/: README.md
example/myrepo/: README.md
example/myrepo/mylib/: README.md  mylib.notionpub.yaml
example/myrepo/mylib/docs/: mylib.md
example/myrepo/mylib/docs/api/: Overview.md
example/myrepo/mylib/docs/architecture/: Background.md
src/notionpub/: config.py  main.py  notion.py
